@@ -139,6 +139,7 @@ LIBBSON_1.0 {
         bson_reader_new_from_file;
         bson_reader_new_from_handle;
         bson_reader_read;
+        bson_reader_reset;
         bson_reader_set_read_func;
         bson_reader_set_destroy_func;
         bson_reader_tell;
