@@ -140,6 +140,7 @@ bson_reader_new_from_fd
 bson_reader_new_from_file
 bson_reader_new_from_handle
 bson_reader_read
+bson_reader_reset
 bson_reader_set_read_func
 bson_reader_set_destroy_func
 bson_reader_tell
