@@ -1,3 +1,9 @@
+NEXT RELEASE
+============
+
+  * New function bson_reader_reset seeks to the beginning of a BSON buffer.
+
+
 Libbson-1.3.3
 =============
 
